13.4. Implementando pesquisas simples na API